version 7.4
~~~~~~~~~~~~~~~~

* added better obfuscation around encodedcommand
* added new third party module google analytics attack: # https://github.com/ZonkSec/google-analytics-attack. Walkthrough here: http://www.zonksec.com/blog/social-engineering-google-analytics/
* converted alphanumeric shellcode to accept DNS names
* changed alphanumeric shellcode to reverse_https instead of reverse_tcp

~~~~~~~~~~~~~~~~
version 7.3.16
~~~~~~~~~~~~~~~~

* fixed a bug that caused seautomatic to not detect full path of toolkit when launching from within directory
* fixed a bug in seautomate that would not wait for commands to execute based on time delay when launching and causing it to not submit
* fixed an issue where python3 would not import urllib.request
* fixed an issue that would cause python2.7 not to work without wget installed

~~~~~~~~~~~~~~~~
version 7.3.15
~~~~~~~~~~~~~~~~

* fix repetative sqlport issue bug for non existent hosts

~~~~~~~~~~~~~~~~
version 7.3.14
~~~~~~~~~~~~~~~~

* fixed a delay change in mssql

~~~~~~~~~~~~~~~~
version 7.3.13
~~~~~~~~~~~~~~~~

* some versions of OpenSSL would throw a zipimporter error. 7.3.13 resolves this issue

~~~~~~~~~~~~~~~~
version 7.3.12
~~~~~~~~~~~~~~~~

* added prompt before brute forcing
* removed nmap depend and used standard sockets for tcp connect
* reduced connect time for mssql
* added warning when you are out of credits for sms spoof

~~~~~~~~~~~~~~~~
version 7.3.11
~~~~~~~~~~~~~~~~

* major rehaul on mssql bruter now supports threading support for all udp/1433 scans
* combined udp/1433 sweep/scan functions and simplified code

~~~~~~~~~~~~~~~~
version 7.3.10
~~~~~~~~~~~~~~~~

* added masking of password in sms
* fixed encoding issue with sms spoofing

~~~~~~~~~~~~~~~~
version 7.3.9
~~~~~~~~~~~~~~~~

* config cleanup
* fixed an issue when using psexec injection it would use reverse_tcp instead of reverse_https this was due to the set.config being used

~~~~~~~~~~~~~~~~
version 7.3.8
~~~~~~~~~~~~~~~~
