@@ -6,6 +6,7 @@ version 7.4
 * added new third party module google analytics attack: # https://github.com/ZonkSec/google-analytics-attack. Walkthrough here: http://www.zonksec.com/blog/social-engineering-google-analytics/
 * converted alphanumeric shellcode to accept DNS names
 * changed alphanumeric shellcode to reverse_https instead of reverse_tcp
+* added prompt for TLS support in email phishing
 
 ~~~~~~~~~~~~~~~~
 version 7.3.16
